# website

./: .editorconfig  .env  .gitignore  CHANGELOG.md  LICENSE.md  TODO.md  astro.config.mjs  bun.lockb  flake.nix  gen.cabal  hie.yaml  index.md  maxniederman-com.cabal  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  snowpack.config.mjs  tailwind.config.js  tsconfig.json
.direnv/: flake-profile-13-link  flake-profile-2-link  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 1qz0d0cx49ic26jynvb6fqmzl138rj0s-source  3jpr0w3s8xx2q9260h3hdbwwbw1h3vip-source  8dabim7434rdrbmhhvjw40p7hd36ndgk-source  9sk20nb8ml9wyc4mm2hasz4m2cgn8fm6-source
.github/workflows/: deploy.yaml
app/: Document.hs  Main.hs  Markdown.hs
content/: astro.config.mjs  helloworld.md  index.html  jsconfig.json  package.json  snowpack.config.mjs
content/projects/: luthien.md  ttyper.md
content/public/: keybase.txt
content/static/: keybase.txt
content/styles/: _code.scss  _theme.scss  _type.scss  global.scss  page.scss
content/templates/: base-head.html  nav.html  page.html
public/: keybase.txt  pgp.pub  pgp_key
public/styles/: _theme.scss  code.scss  global.scss  tailwind.css  typography.scss
scripts/: cf_pages.sh  clifford-attractor.js
src/: Main.hs  env.d.ts
src/components/: Analytics.astro  BaseHead.astro  CliffordAttractor.svelte  Logo.astro  Marquee.svelte  Nav.astro  Nav.svelte  OrbitingRings.svelte  PostHeader.astro  Posthog.svelte  (+5 more)
styles/: global.css
theme/: package.json
(+116 files in other folders)
