cabal-version:      2.4
name:               gen
version:            0.1.0.0

license:            CC-BY-4.0
author:             Max Niederman
maintainer:         max@maxniederman.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable gen
  main-is:          Main.hs
  build-depends:
    , base          ^>=4.14.3.0
    , hakyll        ^>=4.15.1.1

  hs-source-dirs:   app
  default-language: Haskell2010
